--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="styles/styles.css">
 
     <!-- dependencies -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/underscore/underscore.js"></script>
-    <script src="bower_components/backbone/backbone.js"></script>
+    <script src="../test/lib/jquery/jquery.js"></script>
+    <script src="../test/lib/underscore/underscore.js"></script>
+    <script src="../test/lib/backbone.js"></script>
     <!-- your scripts -->
     <script src="scripts/data.js"></script>
     <script src="scripts/app.js"></script>
